# projeto1

./: README.md
client/client/: README.md  pyproject.toml
client/client/client/: client.py
server/server/: README.md  pyproject.toml
server/server/server/: server.py
