[tool.poetry]
name = "server"
version = "0.1.0"
description = "server side to receive files from a client"
authors = ["Talisson Avila <devtalisson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
